<resources>
    <string name="app_name">DropIn</string>
    <string name="google_api_key">AIzaSyCVaTAeXDuCHJez9HkjVOok7KqfsJzTfzE</string>
    <string name="google_app_id">153142172478</string>
    <string name="facebook_id">1490733984564983</string>
    <string name="network_problem">No network detected.</string>
    <string name="please_connect_to_continue">Please connect to continue</string>
    <string name="loading">Loading &#8230;</string>
    <string name="processing">Processing&#8230;</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="ok_cap">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_try_again">We are unable to process requests at this time. Please try again later.</string>
    <string name="splash_messages">Remote Video Inspection</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="skip">Skip</string>
    <string name="text_1">Request a live stream of anything,\nanywhere in the world by inputting\nthe location you want to see</string>
    <string name="text_2">Your Droperator navigates to your location\nand initiates a live stream that you\ncan watch as long as you like</string>
    <string name="text_3">Watch live video of your requested location for as long as you\'d like</string>
    <string name="text_4">Earn money broadcasting live\nstreams for viewers</string>
    <string name="do_not_show_again">Don\'t Show Again</string>
    <string name="term_of_service">Terms of Service</string>
    <string name="jump_to_bottom">Jump to Bottom</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="term_of_privacy">Terms &#x26; Privacy</string>
    <string name="scroll_down_to_acept">Scroll Down to Accept</string>
    <string name="login">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="you_will_receive">You will receive a confirmation code via SMS text messages to verify your account.</string>
    <string name="error_firstname">Enter your first name.</string>
    <string name="error_lastname">Enter your last name.</string>
    <string name="error_phone">Invalid Phone Number. Please try again.</string>
    <string name="error_email">Invalid Email Address. Please try again.</string>
    <string name="error_entries">Invalid Entries. Please try again.</string>
    <string name="error_phone_email">Invalid phone number or email. Please try again.</string>
    <string name="if_you_have">If you have a referral code, enter it below to receive credits.</string>
    <string name="refer_your_friend_for_more">Refer your friends for more credits!</string>
    <string name="referral_code">Referral code</string>
    <string name="verification">Verify Account</string>
    <string name="enter_your_confirmation">Enter your confirmation code.</string>
    <string name="confirm">Confirm</string>
    <string name="error_verify">Invalid Code. Please try again.</string>
    <string name="resend_code">Resend Code</string>
    <string name="message_verify_done">Done! \nTime to request \nyour first live stream.</string>
    <string name="enter_code">Enter code</string>
    <string name="new_code_send">New confirmation code has been sent.</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="notification">Notification</string>
    <string name="payment">Payment</string>
    <string name="general">General</string>
    <string name="term_of_service_and_privacy_policy">Term of Service \nand Privacy Policy</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="customer_support">Customer Support</string>
    <string name="logout">Log Out</string>
    <string name="logout_title">Log Out</string>
    <string name="allow">Allow</string>
    <string name="do_not_allow">Don\'t Allow</string>
    <string name="messages_location">Can DropIn detect your location?</string>
    <string name="messages_sms">Can DropIn send you notification via SMS text?</string>
    <string name="verification_success">Verification Successful!</string>
    <string name="are_you_sure_you_want">Are you sure you want to log out?</string>
    <string name="enroute">Enroute</string>
    <string name="request_stream">Request Stream</string>
    <string name="search_address">Search for address, city or country</string>
    <string name="searching_for_operator">Searching for \nDroperators&#8230;</string>
    <string name="message_become_operator">Would you like to become a Droperator?</string>
    <string name="close">Close</string>
    <string name="message_warning_become_operator">Warning! In order to become a DropIn Droperator you have to allow DropIn to Detect your location</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="message_invite_friends">No results in your area! Refer a friend to become a DropIn Droperator</string>
    <string name="operator_found">Droperator Found!</string>
    <string name="select_continue">Select &amp; Continue</string>
    <string name="find_droperator">Find Droperator</string>
    <string name="is_near_your_drop_in_location">is near your DropIn location</string>
    <string name="message_device_invalid">Sorry, this device isn\'t compatible with Droperator mode.</string>
    <string name="please_enter_a_payment_method_to_continue">Please enter a payment method to continue</string>
    <string name="please_enter_a_new_payment_method_to_continue">Please enter a new payment method to continue</string>
    <string name="add_payment">Add Payment</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="no_result_found">No results found</string>
    <string name="message_refer_friend">Refer a friend and you can earn 5% of every stream they complete!</string>
    <string name="opp_invalid_payment_method">Opps! Invalid payment method</string>
    <string name="invalid_dropin_payment">Invalid Dropin payment</string>
    <string name="refer_a_friend">Refer a Friend</string>
    <string name="message_invalid_payment_method">Please confirm credit card information is correct.</string>
    <string name="go_to_payment">Go to Payment</string>
    <string name="title_permission_notification">DropIn Would Like to Send You Push Notifications</string>
    <string name="message_permission_notification">Notifications may include alerts, sounds and icon badges. These can be configured in Settings</string>
    <string name="title_permission_location">"App" Would Like to Use Your Current Location</string>
    <string name="message_droperator_not_available">Droperator is no longer available</string>
    <string name="search_again">Search Again</string>
    <string name="message_document_not_approved">Your Docusign Form is in processing for approval</string>
    <string name="message_waiting_response_from_droperator">Waiting for response \nfrom Droperator</string>
    <string name="message_incoming_job">You\'ve got a Live Stream Request!</string>
    <string name="message_deny_request_from_droperator">Droperator did not respond to your request.</string>
    <string name="title_cancel_request_en_route">Droperator is en route</string>
    <string name="message_cancel_request_en_route">You will be charged %s to cancel this request.</string>
    <string name="yes_i_accept_the_fee">Yes, I accept the fee</string>
    <string name="no_do_not_cancel_my_request">No, don\'t cancel my request</string>
    <string name="title_location_service">Location services disabled</string>
    <string name="message_location_service">DropIn needs access to your location. Please turn on Location Services.</string>
    <string name="enable">Enable</string>
    <string name="message_job_is_no_longer_active">Job is no longer active. Return to the map to accept new job requests.</string>
    <string name="launching_stream">Launching Stream</string>
    <string name="message_cancel_incoming_job">Your incoming job is cancelled successfully.</string>
    <string name="low_battery">Low battery</string>
    <string name="message_low_battery_viewer">Please charge your device to continue.</string>
    <string name="title_low_battery_droperator_15">15% battery remaining</string>
    <string name="message_low_battery_droperator_15">if battery reaches 10%, payment will be forfeited.</string>
    <string name="disconnected">Disconnected</string>
    <string name="message_low_battery_droperator_10">Please charge device before accepting new requests.</string>
    <string name="waiting_location">Waiting location</string>
    <string name="route_overview">Route Overview</string>
    <string name="distance">Distance</string>
    <string name="see_full_directions_as_list">See Full Directions as List</string>
    <string name="message_low_battery_booted_out">If battery reaches 10%, you will be booted out of Droperator mode.</string>
    <string name="message_confirm_before_request_stream">Streams are a $10 initiation fee plus $1 per minute enroute and streaming.</string>
    <string name="continues">Continue</string>
    <string name="cancel_stream">Cancel stream</string>
    <string name="destination">Destination</string>
    <string name="message_battery_less_than_10">Your battery needs to be greater than 10%. Please charge your device to become a Droperator.</string>
    <string name="learn_more">Learn more</string>
    <string name="similar_process_is_already_active">It looks like you are already part of a stream. Please log out and log back in to request a new stream.</string>
    <string name="inbox">Inbox</string>
    <string name="archive">Archive</string>
    <string name="messages">Messages</string>
    <string name="back_to_messages">Back</string>
    <string name="archived_messages_title">Archived Messages</string>
    <string name="no_inbox">No messages yet</string>
    <string name="city">City</string>
    <string name="select_picture">Select Picture</string>
    <string name="from_gallery">From Gallery</string>
    <string name="take_picture">Take Picture</string>
    <string name="message_delete_account">Are you sure you want to delete your account? If you drop out, your profile settings will be erased.</string>
    <string name="no_do_not_delete_my_account">No, don\'t delete my account</string>
    <string name="yes_i_want_to_proceed">Yes, I want to proceed</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="feedback_title">Help us improve DropIn</string>
    <string name="feedback_hint">Tell us why you\'re deactivating you account</string>
    <string name="personal_info">Personal info</string>
    <string name="social_security">Social Security #</string>
    <string name="birthday">Birthday</string>
    <string name="droperator_age_hint">You must be 18 or older to be a droperator</string>
    <string name="field_completion_hint">Please complete all fields</string>
    <string name="address">address</string>
    <string name="street">Street</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="bank_account_information">bank account information</string>
    <string name="account_number">Account Number</string>
    <string name="routing_number">Routing Number</string>
</resources>