<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    android:fillViewport="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lay_delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="36dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="2dp"
                android:text="@string/message_delete_account"
                android:textColor="@color/text_gray_dark"
                android:textSize="16sp" />

            <Button
                android:id="@+id/bt_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@drawable/selector_button_blue"
                android:text="@string/no_do_not_delete_my_account"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <Button
                android:id="@+id/bt_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/selector_button_red"
                android:text="@string/yes_i_want_to_proceed"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_feedback"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="36dp">

            <TextView
                android:id="@+id/tv_title_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/feedback_title"
                android:textColor="@color/text_gray_dark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/ed_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@color/white"
                android:gravity="top"
                android:hint="@string/feedback_hint"
                android:minLines="7"
                android:padding="8dp"
                android:textColor="@color/text_gray_dark"
                android:textColorHint="@color/text_gray_hint"
                android:inputType="textCapSentences" />

            <Button
                android:id="@+id/bt_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/selector_button_blue"
                android:text="@string/send_feedback"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <Button
                android:id="@+id/bt_skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/selector_button_transparent"
                android:text="@string/skip"
                android:textAllCaps="false"
                android:textColor="@color/text_green"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>


</ScrollView>