<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen_grey"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textAllCaps="true"
            android:textColor="@color/text_gray_dark" />

        <com.dropininc.customview.HighlightEditText
            android:id="@+id/dropRegisterStreetEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:hint="@string/street"
            android:imeOptions="actionNext"
            android:textColor="@color/text_gray_dark"
            android:textColorHint="@color/text_gray_hint"
            android:textSize="18sp"
            app:het_min_symbols="1"
            app:het_required="true"
            android:maxLines="1"
            android:inputType="text" />

        <com.dropininc.customview.HighlightEditText
            android:id="@+id/dropRegisterCityEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:hint="@string/city"
            android:imeOptions="actionNext"
            android:textColor="@color/text_gray_dark"
            android:textColorHint="@color/text_gray_hint"
            android:textSize="18sp"
            app:het_min_symbols="1"
            app:het_required="true"
            android:maxLines="1"
            android:inputType="text" />

        <com.dropininc.customview.HighlightEditText
            android:id="@+id/dropRegisterStateEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:hint="@string/state"
            android:imeOptions="actionNext"
            android:textColor="@color/text_gray_dark"
            android:textColorHint="@color/text_gray_hint"
            android:textSize="18sp"
            app:het_min_symbols="1"
            app:het_required="true"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <com.dropininc.customview.HighlightEditText
            android:id="@+id/dropRegisterZipCodeEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:hint="@string/zip_code"
            android:imeOptions="actionDone"
            android:textColor="@color/text_gray_dark"
            android:textColorHint="@color/text_gray_hint"
            android:textSize="18sp"
            app:het_max_symbols="5"
            app:het_min_symbols="5"
            app:het_required="true"
            android:inputType="numberSigned"
            android:maxLines="1" />

    </LinearLayout>

    <Button
        android:id="@+id/dropRegisterNextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/enable_state_button_bg"
        android:enabled="false"
        android:text="@string/field_completion_hint"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginTop="16dp" />

</LinearLayout>