<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtArchivedMessages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:singleLine="true"
        android:text="@string/archived_messages_title"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/text_medium" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <com.dropininc.customview.RecyclerViewEmptySupport
            android:id="@+id/archiveRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_8dp" />

        <TextView
            android:id="@+id/emptyView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_16dp"
            android:gravity="center"
            android:text="@string/no_inbox"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_medium"
            android:visibility="gone" />
    </FrameLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_button_blue"
        android:gravity="center"
        android:text="@string/back_to_messages"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_medium" />

</LinearLayout>
