<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen_grey"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_nav"
        android:background="@color/navigation_bg_black">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/verification"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_40dp"
        android:paddingLeft="@dimen/margin_40dp"
        android:paddingRight="@dimen/margin_40dp"
        android:paddingTop="@dimen/margin_32dp">

        <TextView
            android:id="@+id/txtError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:gravity="center"
            android:text="@string/enter_your_confirmation"
            android:textColor="@color/black"
            android:textSize="@dimen/text_mini_small" />

        <EditText
            android:id="@+id/txtCode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edittext"
            android:layout_marginTop="@dimen/margin_8dp"
            android:background="@drawable/bg_edittext_white"
            android:gravity="center"
            android:hint="@string/enter_code"
            android:inputType="number"
            android:maxLength="4"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:singleLine="true"
            android:textColor="@color/text_gray_dark"
            android:textColorHint="@color/text_gray_hint"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/tvCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/margin_16dp"
            android:background="@drawable/selector_button_blue"
            android:gravity="center"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small" />

        <Button
            android:id="@+id/btnResend"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/resend_code"
            android:textAllCaps="false"
            android:textColor="@drawable/selector_text_blue"
            android:textSize="@dimen/text_small" />

    </LinearLayout>
</LinearLayout>
